--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:id="@+id/planeta_esquina_inf_der"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:src="@drawable/saturno"
+        android:src="@drawable/saturno_animado"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="16dp"
