--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -1,38 +1,53 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0C0A1E"
+    android:background="@drawable/fondo_gradiente"
     tools:context=".MainActivity">
+
+    <com.example.proyectoprogra.ConstelacionView
+        android:id="@+id/backgroundConstellation"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:alpha="0.3"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_top_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.05" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_logo_bottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.28" />
-    <androidx.constraintlayout.widget.Guideline
-    android:id="@+id/guideline_title_bottom"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    app:layout_constraintGuide_percent="0.38" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_title_bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.38" />
 
     <TextView
         android:id="@+id/welcome_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="196dp"
+        android:layout_marginBottom="144dp"
         android:gravity="center"
+        android:shadowColor="#80000000"
+        android:shadowDx="0"
+        android:shadowDy="8"
+        android:shadowRadius="8"
         android:text="¡Aventura por el Cosmos!"
         android:textColor="@android:color/white"
         android:textSize="28sp"
@@ -42,43 +57,56 @@
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/subtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Selecciona tu destino"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        android:textStyle="normal"
+        app:layout_constraintTop_toBottomOf="@+id/welcome_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="4dp" />
+
     <ImageView
         android:id="@+id/btn_explore_universe"
-        android:layout_width="180dp"
+        android:layout_width="365dp"
         android:layout_height="180dp"
-        android:scaleType="fitCenter"
-        app:srcCompat="@drawable/botonacuerpos"
-        app:layout_constraintTop_toBottomOf="@+id/welcome_title"
-        app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
         android:clickable="true"
         android:focusable="true"
-        android:layout_marginTop="24dp" />
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/welcome_title"
+        app:srcCompat="@drawable/botonacuerpos" />
+
     <ImageView
         android:id="@+id/btn_practice_quiz"
-        android:layout_width="180dp"
+        android:layout_width="365dp"
         android:layout_height="180dp"
-        android:scaleType="fitCenter"
-        app:srcCompat="@drawable/botonaquizz"
-        app:layout_constraintTop_toBottomOf="@+id/btn_explore_universe"
-        app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"
         android:clickable="true"
         android:focusable="true"
-        android:layout_marginTop="16dp" />
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_explore_universe"
+        app:srcCompat="@drawable/botonaquizz" />
+
     <ImageView
         android:id="@+id/btn_theories"
-        android:layout_width="180dp"
+        android:layout_width="365dp"
         android:layout_height="180dp"
         android:scaleType="fitCenter"
         app:srcCompat="@drawable/botonateorias"
         app:layout_constraintTop_toBottomOf="@+id/btn_practice_quiz"
-        app:layout_constraintVertical_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:clickable="true"
         android:focusable="true"
         android:layout_marginTop="16dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
